change keyfram anim for resolver overflow problem

--- a/webkreative/assets/styles/app.scss
+++ b/webkreative/assets/styles/app.scss
@@ -73,6 +73,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 /* ---- LANDING PAGE CSS --- */
@@ -269,17 +270,13 @@ section {
 
 #hero {
   height: calc(100vh - 8rem);
+  overflow-x: clip;
 }
 
 /* ---- Caroussel ---- */
 .caroussel {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -1;
 }
 
 .slide1,
@@ -335,22 +332,20 @@ section {
 
 @keyframes anim1 {
   0%, 8.3%{ left: -100%; opacity: 0; }
-  8.3%, 25% { 
-    left: 25%; 
-    opacity: 1; }
-  33.33%, 100% { left: 110%; opacity: 0; }
+  8.3%, 25% { left: 25%; opacity: 1; }
+  33.33%, 100% { opacity: 0; }
 }
 
 @keyframes anim2 {
 	0%, 33.33% { left: -100%; opacity: 0; }
   41.63%, 58.29% { left: 25%; opacity: 1; }
-  66.66%, 100% { left: 110%; opacity: 0; }
+  66.66%, 100% { opacity: 0; }
 }
 
 @keyframes anim3 {
   0%, 66.66% { left: -100%; opacity: 0; }
   74.96%, 91.62% { left: 25%; opacity: 1;}
-  100% { left: 110%; opacity: 0;}
+  100% { left: 100% ;opacity: 0;}
 }
 /* ---- END Carousseul ---- */
 
